# ult-s

./: .gitignore  Cargo.toml  Labels.txt  ParamLabels.csv  README.md  Squirtle changelog.txt  Ultimate S Setup Tool.py  changements carapuce.rs  credits.txt  desktop.ini  out.prc  readme-lite.txt  readme.txt  yamlist  yamlist.py
.devcontainer/: Dockerfile
.github/workflows/: build_char.yml  build_full.yml  build_small.yml  pr_comment.yml  release.yml  run.yml  run_char.yml  run_small.yml  rust.yml  rust_build.yml
changelog/: bomberman.md  bowser.md  brawler.md  chrom.md  cloud.md  daisy.md  donkeykong.md  drmario.md  dsamus.md  falco.md  falcon.md  fox.md  ganondorf.md  gnw.md  home.md  how2changelog.md  ike.md  incineroar.md  isabelle.md  jigglypuff.md  kirby.md  link.md  lucario.md  lucas.md  luigi.md  mario.md  marth.md  masked.md  metaknight.md  pacman.md  palutena.md  peach.md  pichu.md  pikachu.md  rayman.md  roy.md  samus.md  sandbag.md  sheik.md  shulk.md  (+9 more)
romfs/: config.json  config_param.toml  victory.toml
romfs/ult_s/: config.json
scripts/: add-markers-code.py  add-markers.py  apply_diff.py  batch_add_priority.py  blank_models.py  build.py  build_char.py  build_dev.py  build_diff.py  build_git.py  build_lite.py  build_local.py  build_release.py  build_small.py  c00clone.py  config_split.py  export_yamlist.py  export_yamlist.sh  init_char_check.py  merge_config.py  normals_vertex_calc.py  out.rs  replace.txt  sm4shconvert.py  stage_vertex_normals.py  stat_ranker.py  statistics.py  stats2md.py  to_rust.py  to_toml.py  vl_to_toml.py
scripts/.stats/: rank  air_accel_x_add.txt  rank  air_accel_x_mul.txt  rank  air_accel_y.txt  rank  air_speed_x_stable.txt  rank  air_speed_y_stable.txt  rank  dash_speed.txt  rank  ground_brake.txt  rank  jump_aerial_y.txt  rank  jump_speed_x.txt  rank  jump_speed_x_max.txt  rank  jump_speed_x_mul.txt  rank  jump_y.txt  rank  mini_jump_y.txt  rank  run_speed_max.txt  rank  walk_speed_max.txt  rank  weight.txt  rank air_accel_x_add.txt  rank air_accel_x_mul.txt  rank air_speed.txt  rank dash_speed.txt  rank fallspeed.txt  rank gravity.txt  rank jump_aerial_y.txt  rank jump_speed_x.txt  rank jump_speed_x_max.txt  rank jump_speed_x_mul.txt  rank jump_y.txt  rank mini_jump_y.txt  rank run_speed_max.txt  rank traction.txt  rank walk_speed_max.txt  rank weight.txt
scripts/c01/: j01appealendexplode.nuanmb
scripts/c04/: e01catchwalkf.nuanmb
scripts/c07/: d01specialairsstart.nuanmb
scripts/char_stats/: gamewatch.csv
scripts/data/: default.xml
src/: lib.rs  projectile_invuln.rs  remove_quake.rs
src/bayo/: mod.rs
src/bayonetta/: frame.rs  (+2 more)
ultimate-s-setup/: old_setup_tool.py
(+7627 files in other folders)
