[package]
name = "plugin"
version = "0.1.0"
authors = ["chrispo"]
edition = "2018"

[package.metadata.skyline]
titleid = "01006A800016E000"

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = "0.2.0"
ninput = { git = "https://github.com/blu-dev/ninput", version = "0.1.0" }
skyline_smash = { git = "https://github.com/blu-dev/skyline-smash.git", features = ["weak_l2cvalue"] }
smash_script = { git = "https://github.com/blu-dev/smash-script.git", branch = "development" }
smashline = { git = "https://github.com/blu-dev/smashline.git", branch = "development" }
bitflags = "1.3.2"
modular-bitfield = "0.11.2"
lazy_static = "1.4.0"
smash_singletons = { git = "https://github.com/WuBoytH/smash_singletons.git" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
